feat: user registeration, and activation

--- a/server/mails/activation-mail.ejs
+++ b/server/mails/activation-mail.ejs
@@ -74,7 +74,7 @@
             <p>Thank you for signing up! Please confirm your email address by Enter Code given below 
                 </p>
 
-           <h2><%= activatioToken.activationCode%></h2>
+           <h2><%= activationToken.activationCode%></h2>
             <p style="margin-top: 30px;">If you didn’t create an account, you can safely ignore this email.</p>
         </div>
         <div class="footer">
